# manage_deploy

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT_ACCEPTANCE.md  README.md  SPEC.md  docker-compose.agents.yml  docker-compose.yml  pyproject.toml  setup_env.sh
backend/: .env.example  Dockerfile  config.py  create_db.sql  database.py  e2e_test.py  enums.py  main.py  pyproject.toml
backend/agents/: agent_client.py
backend/api/: __init__.py  admin.py  auth.py  baselines.py  business_tasks.py  conversations.py  demo_assets.py  instances.py  nodes.py  orders.py  routing.py  templates.py  uploads.py
backend/models/: __init__.py
backend/schemas/: __init__.py  conversation.py  health.py  node.py  runtime.py  task.py
backend/scripts/: e2e_compute_only_access.py  e2e_conversation_routing.py  e2e_user_endpoint_manual_containers.py  evaluate_intent_parser.py  generate_intent_dataset.py  rebuild_matmul_template.py  rebuild_video_template.py  run_baseline.py  run_baseline_local.py  run_intent_online_eval.py  seed_demo_data.py  setup_matmul_demo.py  smoke_dashscope_batch_models.py
backend/services/: auto_port_allocator.py  baseline_runner.py  business_env.py  business_evaluator.py  business_task_query.py  dag_builder.py  dag_executor.py  deployment_profile.py  endpoint_resolver.py  health_checker.py  instance_builder.py  instance_lifecycle.py  intent_batch_eval.py  intent_online_eval.py  intent_parser.py  intent_workflow.py  order_sync.py  (+19 more)
node_agent/: Dockerfile  config.py  docker_handler.py  health_checks.py  main.py  port_utils.py  pyproject.toml  runtime_resources.py
(+224 files in other folders)
